--- a/BlogEngine/BlogEngine.NET/Account/account.master
+++ b/BlogEngine/BlogEngine.NET/Account/account.master
@@ -22,8 +22,7 @@
     <form id="Form1" runat="server">
         <div class="account">
             <div class="account-header text-center">
-                <a href="https://blogengine.io/" target="_blank">
-                    <img alt="BlogEngine.NET" src="../Content/images/blog/logo.png" /></a>
+                Hello Hieu, Is you?
             </div>
              <div id="StatusBox">
                     <div id="AdminStatus" runat="server" style="display: none"></div>
